fixed languages; show map quicker, but blurred

--- a/src/styles/ic-map.css
+++ b/src/styles/ic-map.css
@@ -8,7 +8,6 @@ ic-map {
 
 ic-map-consent-reminder + ic-map {
 	filter:					blur(1rem) saturate(0.5) contrast(0.25) brightness(1.5);
-	transistion:			none;
 }
 
 
